--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "ncu"
+play.http.secret.key = "college_of_food_science_ncu_platform"
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -398,7 +398,7 @@ slick.dbs.default.driver = "slick.driver.MySQLDriver$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
 slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/ncu_diversity_platform?rewriteBatchedStatements=true&useSSL=false"
 slick.dbs.default.db.user = "root"
-slick.dbs.default.db.password = "123456"
+slick.dbs.default.db.password = "Yingfei123"
 
 play.server.http.idleTimeout = infinite
 
